Fix freezing of FreezableList